Additidion to init
- Change fileformat of secrets file
- Change missplaced script tag in index.html
- Add Weather display container and heading to index.html

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <link rel="stylesheet" href="style/main.css" />
     <title>Weather App</title>
   </head>
-  <body></body>
-  <script src="script/main.js"></script>
+  <body>
+    <h1>Weather App</h1>
+    <div id="weather-display"></div>
+    <script src="script/main.js" defer></script>
+  </body>
 </html>
