feat: Add input for city and display result
- Add a form to input a city
- print the result(s) as JSON on the screen below the ceatther

--- a/index.html
+++ b/index.html
@@ -8,7 +8,19 @@
   </head>
   <body>
     <h1>Weather App</h1>
+
+    <form id="city-input">
+      <label for="city">City Weather</label>
+      <input type="text" name="city" id="city" placeholder="Warstein" />
+
+      <button type="submit">Submit</button>
+    </form>
+
+    <br />
+
     <div id="weather-display"></div>
+    <br />
+    <div id="location-display"></div>
     <script src="script/main.js" defer></script>
   </body>
 </html>
