feat: display the weather based on the user input
- If there is only one city as serch result it will be printed directly.
- If the city can not be identified because there are multiple options
- IF there i no city to satisfy the serch results the user gets a message to enter an existing city

--- a/index.html
+++ b/index.html
@@ -15,12 +15,17 @@
 
       <button type="submit">Submit</button>
     </form>
-
     <br />
 
     <div id="weather-display"></div>
     <br />
+
     <div id="location-display"></div>
+
+    <template id="location-template">
+      <div class="location-card"></div>
+    </template>
+
     <script src="script/main.js" defer></script>
   </body>
 </html>
