feat: diusplay weather information seperatly
- The weather data is is structured with a description and unit each.
- The sunrise and -set dates are converted to the timezone of the weatherdata

--- a/index.html
+++ b/index.html
@@ -17,7 +17,29 @@
     </form>
     <br />
 
-    <div id="weather-display"></div>
+    < id="weather-display">
+      <div>Stadt: <span id="name"></span></div>
+      <div>Land: <span id="country"></span></div>
+      <div>Wetter: <span id="description"></span></div>
+      <br />
+      <div>Temparatur: <span id="temp"></span> °C</div>
+      <div>Gefühlte Temperatur: <span id="feels-like"></span> °C</div>
+      <div>Mindesttemparatur: <span id="temp-min"></span> °C</div>
+      <div>Maximale Temperatur: <span id="temp-max"></span> °C</div>
+      <div>Luftdruck: <span id="pressure"></span> hPa</div>
+      <div>Luftfeuchtigkeit: <span id="humidity"></span> %</div>
+      <div>Sichtweite: <span id="visibility"></span> m</div>
+      <br />
+      <div>Windgeschwindigkeit: <span id="wind-speed"></span> m/s</div>
+      <div>Windrichtung: <span id="wind-deg"></span> °</div>
+      <div>Böen-Geschwindigkeit: <span id="wind-gust"></span> m/s</div>
+      <div>Regenmenge im letzten Stunde: <span id="rain"></span> mm</div>
+      <div>Wolkenbedeckung: <span id="clouds"></span> %</div>
+      <br>
+      <div>Sonneaufgang: <span id="sunrise"></span></div>
+      <div>Sonnenuntergang: <span id="sunset"></span></div>
+  </div>
+
     <br />
 
     <div id="location-display"></div>
