feat: Apply style to page header
- Add header template in 'Location Date Time' format
- Add style to location search bar

--- a/index.html
+++ b/index.html
@@ -7,10 +7,9 @@
     <title>Weather App</title>
   </head>
   <body>
-    <h1>Weather App</h1>
+    <header>Location Date Time</header>
 
     <form id="city-input">
-      <label for="city">City Weather</label>
       <input type="text" name="city" id="city" placeholder="Warstein" />
 
       <button type="submit">Submit</button>
@@ -23,7 +22,7 @@
       <div>Wetter: <span id="description"></span></div>
       <div><img src="" alt="Pictogram of the weather" id="icon" /></div>
       <br />
-      <div>Temparatur: <span id="temp"></span> °C</div>
+      <div><span id="temp"></span> °C</div>
       <div>Gefühlte Temperatur: <span id="feels-like"></span> °C</div>
       <div>Mindesttemparatur: <span id="temp-min"></span> °C</div>
       <div>Maximale Temperatur: <span id="temp-max"></span> °C</div>
