feat(style.css): add grid layout to weather data

--- a/index.html
+++ b/index.html
@@ -26,26 +26,33 @@
     <div id="weather-display">
       <div>Wetter: <span id="description"></span></div>
       <div><img src="" alt="Pictogram of the weather" id="icon" /></div>
-      <br />
-      <div><span id="temp">Temparatur: </span> °C</div>
-      <div>Gefühlte Temperatur: <span id="feels-like"></span> °C</div>
-      <div>Mindesttemparatur: <span id="temp-min"></span> °C</div>
-      <div>Maximale Temperatur: <span id="temp-max"></span> °C</div>
-      <div>Luftdruck: <span id="pressure"></span> hPa</div>
-      <div>Luftfeuchtigkeit: <span id="humidity"></span> %</div>
-      <div>Sichtweite: <span id="visibility"></span> m</div>
-      <br />
-      <div>Windgeschwindigkeit: <span id="wind-speed"></span> m/s</div>
-      <div>Windrichtung: <span id="wind-deg"></span> °</div>
-      <div>Böen-Geschwindigkeit: <span id="wind-gust"></span> m/s</div>
-      <div>Regenmenge im letzten Stunde: <span id="rain"></span> mm</div>
-      <div>Wolkenbedeckung: <span id="clouds"></span> %</div>
-      <br />
-      <div>Sonneaufgang: <span id="sunrise"></span></div>
-      <div>Sonnenuntergang: <span id="sunset"></span></div>
-    </div>
 
-    <br />
+      <div>Temparatur: <span id="temp"></span> °C</div>
+      <div>Gefühlte Temperatur: <span id="feels-like"></span> °C</div>
+
+      <div id="temperature-min-max">
+        <div>Mindesttemparatur: <span id="temp-min"></span> °C</div>
+        <div>Maximale Temperatur: <span id="temp-max"></span> °C</div>
+      </div>
+      <div id="air-info">
+        <div>Luftdruck: <span id="pressure"></span> hPa</div>
+        <div>Luftfeuchtigkeit: <span id="humidity"></span> %</div>
+        <div>Sichtweite: <span id="visibility"></span> m</div>
+      </div>
+
+      <div id="sky-info">
+        <div>Windgeschwindigkeit: <span id="wind-speed"></span> m/s</div>
+        <div>Windrichtung: <span id="wind-deg"></span> °</div>
+        <div>Böen-Geschwindigkeit: <span id="wind-gust"></span> m/s</div>
+        <div>Regenmenge im letzten Stunde: <span id="rain"></span> mm</div>
+        <div>Wolkenbedeckung: <span id="clouds"></span> %</div>
+      </div>
+
+      <div id="sun-info">
+        <div>Sonneaufgang: <span id="sunrise"></span></div>
+        <div>Sonnenuntergang: <span id="sunset"></span></div>
+      </div>
+    </div>
 
     <div id="location-display"></div>
 
