--- a/index.html
+++ b/index.html
@@ -56,6 +56,8 @@
       </div>
     </div>
 
+    <div id="clothing-recommendation"></div>
+
     <template id="location-template">
       <div class="location-card"></div>
     </template>
